Added brief steps of CMake requirements

--- a/process.org
+++ b/process.org
@@ -6,4 +6,9 @@ CLOSED: [2026-01-18 Sun 22:39]
 * DONE Create CMAKE file
 CLOSED: [2026-01-18 Sun 22:45]
 [X] Create a "CMakeList.txt" file
-* TODO Compile main.cpp file
+* DONE Compile main.cpp file
+CLOSED: [2026-01-19 Mon 22:52]
+* CMake
+1. The first line should always be /cmake_minimum_required(${VERSION})/
+2. Then, set the project name, executable file name, using /add_executables(${PROJECT_NAME})
+3. Define your targets using /target_sources/
