--- a/File_Integrity_Checker.org
+++ b/File_Integrity_Checker.org
@@ -28,6 +28,9 @@ CLOSED: [2026-01-25 Sun 18:53]
 *** CMakeList txt updates
 **** DONE Add compile options for all warnings (global)
 CLOSED: [2026-01-25 Sun 19:50]
+**** TODO Testing framework
+***** [] Add test framework
+***** [] Create basic test
 
 
 
