--- a/docs/File_Integrity_Checker.org
+++ b/docs/File_Integrity_Checker.org
@@ -24,10 +24,11 @@ CLOSED: [2026-01-25 Sun 18:53]
 **** Validator
 ***** DONE Remove hardcoded test directory path
 CLOSED: [2026-02-08 Sun 20:34]
-***** IN-PROGRESS Create helpers to set FileInfo struct 
-****** TODO ValidatePath
-****** TODO Exception handling for file_size() (ensure it's a file)
-***** IN-PROGRESS Directory/subdirectory traversal
+***** DONE Create helpers to set FileInfo struct 
+CLOSED: [2026-02-14 Sat 20:39]
+***** RESEARCHING ValidatePath
+***** TODO Exception handling for file_size() (ensure it's a file)
+***** TODO Directory/subdirectory traversal
 ***** RESEARCHING Hash Computation
 *** Write (Record) Mode
 **** TODO Create a preview output that will show the "tree" structure of the directory's contents
